Help button put for web-access along with icon for encryption
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6831 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/help/en/share.html
+++ b/simias/src/webaccess/help/en/share.html
@@ -4,7 +4,7 @@
 
 <!-- Novell iFolder 3.x Web Access  --> 
 
-<title>Adding shared members</title> 
+<title>Accessing Folders and Files</title> 
 
 <!-- Metadata --> 
   <meta name="Author" content="iFolder 3.x Documentation Manager"> 
