Updated the help files to include the review comments from the dev
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6963 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/help/en/browse.html
+++ b/simias/src/webaccess/help/en/browse.html
@@ -43,33 +43,24 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
             with a line beneath it.
        --> 
   <h3 class="head3b"><a name="top"></a>Accessing Folders and Files in Your iFolder</h3>
-  <p> You can reach the Browse page by clicking any of the iFolder name listed 
+  <p> You can reach the Browse page by clicking any of the iFolder link listed 
     on the Home page.</p>
-  <p>Use this page to access folders and files in the iFolders available to you 
-    in this account. For the selected iFolder, you can view a list of its folders 
-    and files, upload and download files, create folders, and delete folders and 
-    files. To create, delete, or share iFolders, you must use the iFolder Client 
-    for your Linux* or Windows* computer. </p>
-  <p>Fo rmore information, see the following:</p><blockquote > 
-
-<a href="#browse" target="_self">Browsing iFolders</a> <br> <a href="#manage" target="_self">Managing 
-Folders and Files in an iFolder</a></blockquote>
- 
-  <p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a></p><h3><a name="browse"></a>Browsing 
-iFolders</h3>
-  <p> The Browse page lists all folders and files available to you in the selected 
-    iFolder. Type the name of the file or folder in the search entry field available 
-    at the top right side of the page and press Enter to locate the desired file 
-    or folder. </p>
-  <p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a></p><h3><a name="manage"></a>Managing 
-Folders and Files in an iFolder</h3><p>Within an iFolder, you can perform 
+  <p>Use this page to access folders and files within the selected iFolder in 
+    the current account. For any selected iFolder, you can view a list of its 
+    folders and files, upload and download files, create folders, and delete folders 
+    and files. </p>
+  
+  
+  
+  <h3><a name="manage"></a>Managing Folders and Files in An iFolder</h3>
+  <p>Within an iFolder, you can perform 
 the following tasks:</p><blockquote> <p><b>View a List of Folders and 
 Files</b><br>
       The Browse page lists folders and files alphabetically. Scroll to locate 
       the directory or file of interest. </p>
     <p><b>Navigate 
 a Directory</b><br>
-      Click name of the folder <img src="../../images/folder_16.gif" width="16" height="16" alt="Folder icon"> 
+      Click name of the folder <img src="../../images/folder_16.png" width="16" height="16" alt="Folder icon"> 
       to open the folder and view a list of its contents. To return to a higher- 
       level directory, use the navigation bar given at the top. You can click 
       either on the icon or the name to return to the desired directory.<br>
@@ -87,12 +78,27 @@ Folders or Files</b><br>
       Select the check box next to one or more folders or files you want to delete, 
       then click Delete to confirm the deletion.</p>
     <p><b>Upload 
-a File</b> <br> In the Upload File field, click Browse, locate a local 
-folder you want to upload, then click Open &gt; Upload. When the page 
-refreshes, the file appears alphabetically in the list.</p>
+a File</b> <br>
+      Click Upload, and in the Upload page, click Browse and locate the local 
+      file you want to upload, then click Open &gt; Upload. When the page refreshes, 
+      the file appears alphabetically in the list.</p>
     <p><b>View History</b> <br>
       Click <img src="../../images/document-properties.png" width="16" height="16" alt="File icon"> 
       to view the history.</p>
+	  <p><b>Delete an iFolder</b></p>
+  <p>To delete an iFolder:</p>
+  <ol>
+  
+    <li> 
+        <p>Click Delete link listed under Actions at the left side of the page.
+        <p> <p>A dialogue box appears, asks you whether 
+        you want to delete the current iFolder. </p>
+    </li>
+    <li> 
+      <p>Click OK in the dialogue box to confirm the iFolder deletion. </p>
+    </li>
+    <li>Click Cancel to cancel the operation.</li>
+  </ol>
   </blockquote> 
  
 <a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a>
