--- a/simias/src/webaccess/help/en/home.html
+++ b/simias/src/webaccess/help/en/home.html
@@ -43,33 +43,32 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
             with a line beneath it.
        --> 
   <h3 class="head3b"><a name="top"></a>Accessing Your iFolders</h3>
-  <p> Use this page to access iFolders available to you in this account. For each 
-    iFolder, you can view the date iFolder created on, create new iFolders and 
-    search iFolders. Click the iFolder link to view the list of its folders and 
-    files in a new page. You can upload and download files, create folders, and 
-    delete folders and files. To create, delete, or share iFolders, you must use 
-    the iFolder Client for your Linux*, Windows*, or Macintosh* computer. </p>
+  <p> Use this page to access all the iFolders available to you in this account. 
+    Available iFolders include those you own and those others have shared 
+    with you. You can access shared iFolders through Web Access even if you have 
+    not set up the iFolder on a local computer.</p>
+	<p>For each iFolder, you can view the created date and the respective owner. 
+    Click the iFolder link to view the list of its folders and files in a new 
+    page. </p>
   <p>For more information, see the following:</p><blockquote > 
 <p><a href="#login" target="_self">Logging In and Logging Out</a> <br>
-      <a href="#browse" target="_self">Searching for iFolders</a> <br>
-       <a href="#manage" target="_self"> 
-Create New iFolder</a></p></blockquote><h3><a name="login"></a>Logging 
-In and Logging Out</h3>
+<a href="#browse" target="_self">Searching For iFolder</a> <br>
+             <a href="#manage" target="_self">Create New iFolder</a> <br>
+<a href="#delete" target="_self">Delete an iFolder</a></p></blockquote>
+<h3><a name="login"></a>Logging In and Logging Out</h3>
   <p>If the system connection times out when you are working in your iFolders, 
     Web Access returns you to the login page. You can log in again to resume working 
     without closing your browser.</p>
-  <p>Log 
-out by clicking Logout in the upper right header area, then close your 
-browser. If you do not log out, your session remains open until your 
-session times out, which can be a security risk. </p><p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a></p>
-  <h3><a name="browse"></a>Searching for iFolders</h3>
-  <p>The iFolders Home page lists all iFolders available to you in the current 
-    account. Available iFolders include those you own and those others have shared 
-    with you. You can access shared iFolders through Web Access even if you have 
-    not set up the iFolder on a local computer. The search tool located at the 
-    top right of the page helps you locate the iFolder you want. The search result 
-    will open to the Search page with the search text highlighted in the search 
-    results. </p>
+  <p>Log out by clicking Logout in the upper right header area, then close your 
+    browser. Logout will redirect you to the URL that your Admin has set while 
+    configuring the setup. If you do not log out, your session remains open until 
+    your session times out, which can be a security risk. </p>
+<p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a></p>
+
+  <h3><a name="browse"></a>Searching For iFolders</h3>
+  <p> The search tool located at the top right of the page helps you locate the 
+    iFolder you want. The search result will open to the same page with the search 
+    text highlighted in the search result. </p>
   <p>Use one or more of the following search methods: </p>
   <UL><LI>
       <P>Select a filter criterion (All, Recent, Owned, Shared) for the name of 
@@ -78,13 +77,14 @@ session times out, which can be a security risk. </p><p><a href="#top" target="_
 (*) in the Search iFolders field to return a list of all iFolders on the system.</P></LI><LI><P>Leave 
 the Search iFolders field empty to return a list of all iFolders on the system.</P></LI></UL>
   <p>Do not click anywhere in the page until the page completely refreshes, then 
-    you can browse, sort, or manage the iFolders listed in the Search Results. 
-    Scroll up and down to browse the search results and locate the iFolder you 
-    want to manage. The combination of the iFolder's name and date created can 
-    help you identify the iFolder you seek.</P>
+    you can browse the iFolders listed in the Search Results. Scroll up and down 
+    to browse the search results and locate the iFolder you want to manage. The 
+    combination of the iFolder's name and date created can help you identify the 
+    iFolder you seek.</P>
   <p>Click the iFolder's 
 name to view a list of its folders and files, upload and download files, 
-create folders, and delete folders and files.</p><p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a></p>
+create folders, and delete folders and files.</p>
+<p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a></p>
   <h3><a name="manage"></a>Create a New iFolder</h3>
   <p>Perform the following steps to create a new iFolder:</p>
   <ol>
@@ -98,7 +98,32 @@ create folders, and delete folders and files.</p><p><a href="#top" target="_self
   
   </ol>
   
-  
+  <h3><a name="delete"></a>Delete an iFolder</h3>
+  <p>To delete an iFolder:</p>
+  <ol>
+  <li> 
+      <p>Click the iFolder you want to delete. </p>
+    </li>
+    <li> 
+      <p>On the iFolder page that opens, click Delete link listed under Actions 
+        at the left side of the page.
+      <p> 
+      <p>A dialogue box appears that asks you whether you want to delete the current 
+        iFolder. </p>
+    </li>
+    <li> 
+      <p>Click OK in the dialogue box to confirm the iFolder deletion. </p>
+    </li>
+    <li>Click Cancel to cancel the operation.</li>
+  </ol>
+  <h3><a name="quota"></a>iFolder Quota</h3>
+  <p> You can view the total space allocated for the currrent account. 
+    At the left side the page, it shows the used space as well as the total space 
+    available for use.</p> 
+  <p> To view the iFolder quota for any given iFolder, click iFolder link to open 
+    the iFolder Browse page. You can view the used and available space for the 
+    current iFolder listed under iFolder Quota at the left side of the Browse 
+    page.</p>
 <a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a>
 <H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
 Related Topics</H4><BLOCKQUOTE class="task1"><P ><A HREF="newifolder.html">Create a New iFolder</A><br><A HREF="browse.html">Accessing Folders and Files in Your iFolder</A><BR><A HREF="details.html">Viewing iFolder Properties
