--- a/simias/src/webaccess/help/en/newfolder.html
+++ b/simias/src/webaccess/help/en/newfolder.html
@@ -43,9 +43,10 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
   <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        -->
-  <h3>Create a New Folder</h3> 
-   <p>In the New Folder field, specify the name of 
-the new folder, then click Create.</p> <p>Folder names are case sensitive. 
+  <h3>Creating a New Folder</h3> 
+   
+  <p>In the Name field, specify the name of the new folder, then click Create.</p>
+  <p>Folder names are case sensitive. 
 When the page refreshes, the folder appears alphabetically in the list.</p>
       <a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a>
 <H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
