--- a/simias/src/webaccess/help/en/newifolder.html
+++ b/simias/src/webaccess/help/en/newifolder.html
@@ -46,12 +46,11 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
   <p>Perform the following steps to create a new iFolder:</p>
   <ol>
     <li> 
-      <p>Click the New iFolder link listed under Actions at the left of the Home 
-        page.</p>
+      <p>Click the New iFolder link listed under Actions at the left side of the 
+        Home page.</p>
     </li>
     <li> 
-      <p>On the new page that opens, specify the following information, then click 
-        Create.</p>
+      <p>In the new page that opens, specify the following information:</p>
     </li>
     <P> 
     <BLOCKQUOTE> <B> Name</B><BR>
@@ -61,25 +60,34 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
       A short description of the iFolder.<br>
       <BR>
       <B> Type</B><BR>
-      Select the type you wanted to create the iFolder as.<br>
-      <BLOCKQUOTE> <B>Encryption enabled</B><BR>
-        Select this option to encrypt your iFolder and the files in it. <BR>
+      select the type of the iFolder that you want to create.<br>
+      <BLOCKQUOTE> <B>Encryption Enabled</B><BR>
+        Select this option to encrypt your iFolder and the files within it. <BR>
         <p><strong>IMPORTANT: </strong>This option is not enabled until your Admin 
-          set your encryption policy to On or Enforced. </p>
-        <B> Shared</B><BR>
-        Select Shared to share your iFolder with any other iFolder accounts. <BR>
-        <p><strong>IMPORTANT: </strong>Shared iFolders cannot be encrypted and encrypted folders cannot be iFolders.</p>
+          set your encryption policy to On. </p>
+        <B> Sharable</B><BR>
+        Select Sharable to share your iFolder with other iFolder accounts. <BR>
+        <p><strong>IMPORTANT: </strong>Shared iFolders cannot be encrypted and 
+          encrypted ones cannot be shared.</p>
       </BLOCKQUOTE>
     </BLOCKQUOTE>
     <li> 
       <p>Select the Recovery agent from the drop-down list.</p>
+      <p><strong>Note: </strong> This option will not be available if your iFolder 
+        Administrator does not select Enable Recovery agent option while configuring 
+        the iFolder server.</p>
       <p>The Recovery agent can be a system, organization, or a person independent 
         of the iFolder system that where you can store the key to recover your 
         secret passphrase.</p>
+      <p><strong>IMPORTANT: </strong> Unless you have set your Recovery agent, 
+        the encrypted data cannot be recovered in the unfortunate case that you 
+        lost the passphrase. </p>
     </li>
     <li> 
-      <p>Enter the Passphrase in the field.</p>
-      <p><strong>IMPORTANT: </strong>Shared iFolders cannot be encrypted nd encrypted folders cannot be iFolders.</p>
+      <p>Type the passphrase in the Enter Passphrase field.</p>
+    </li>
+    <li>Click Create to complete the new iFolder creation. 
+      <p> Click Cancel to cancel the operation. </p>
     </li>
   </ol>
   
