--- a/simias/src/webaccess/help/en/search.html
+++ b/simias/src/webaccess/help/en/search.html
@@ -4,7 +4,7 @@
 
 <!-- Novell iFolder 3.x Web Access  --> 
 
-<title>Accessing Folders and Files</title> 
+<title>Searching Folders and Files</title> 
 
 <!-- Metadata --> 
   <meta name="Author" content="iFolder 3.x Documentation Manager"> 
@@ -41,56 +41,48 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent" style="left: 10px; top: 38px"> 
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
-       --> <h3 class="head3b"><a name="top"></a>Accessing Folders and 
-Files in Your iFolders</h3><p> Use this interface to access folders 
-and files in the iFolders available to you in this account. For each 
-iFolder, you can view a list of its folders and files, upload and download 
-files, create folders, and delete folders and files. To create, delete, 
-or share iFolders, you must use the iFolder Client for your Linux*, 
-Windows*, or Macintosh* computer. </p><p>This help discusses the following:</p><blockquote > 
-<p><a href="#login" target="_self">Logging In and Logging Out</a> <br> 
-<a href="#browse" target="_self">Browsing iFolders</a> <br> <a href="#manage" target="_self">Managing 
-Folders and Files in an iFolder</a></p></blockquote><h3><a name="login"></a>Logging 
-In and Logging Out</h3><p>If the system connection times out when you 
-are working in your iFolders, Web access returns you to the login page. 
-You can log in again to resume working without closing your browser.</p><p>Log 
-out by clicking Logout in the upper right header area, then close your 
-browser. If you do not log out, your session remains open until your 
-session times out, which can be a security risk. </p><p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a></p><h3><a name="browse"></a>Browsing 
-iFolders</h3><p>The iFolders page lists all iFolders available to you 
-in the current account. Available iFolders include those you own and 
-those others have shared with you. You can access shared iFolders through 
-Web access even if you have not set up the iFolder on a local computer. 
-The Owner column identifies the name of the person who owns the iFolder 
-to help you locate the iFolder you seek. </p><p>Click the iFolder's 
-name to view a list of its folders and files, upload and download files, 
-create folders, and delete folders and files.</p><p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a></p><h3><a name="manage"></a>Managing 
-Folders and Files in an iFolder</h3><p>Within an iFolder, you can perform 
-the following tasks:</p><blockquote> <p><b>View a List of Folders and 
-Files</b><br>The iFolder page lists folders and files alphabetically. 
-Scroll to locate the directory or file of interest. </p><p><b>Navigate 
-a Directory</b><br>Click name of the folder <img src="../../images/folder_16.gif" width="16" height="16" alt="Folder icon"> 
-to open the folder and view a list of its contents. To return to a 
-higher level directory, click the Up folder <img src="../../images/up_folder_16.gif" width="14" height="12" alt="Up folder icon"> 
-icon in the task bar.<br> </p><p><b>Open or Save a File</b><br>Click 
-the name of the file <img src="../../images/file_16.gif" width="16" height="16" alt="File icon"> 
-you want to open or save. </p><ul> <li><p>Click Open to view the file's 
-contents. You must have a compatible application on your computer to 
-open the file. If you plan to work in the file, download the file, 
-modify the file, and then upload it.</p></li><li><p>Click Save to save 
-the file on your local hard drive or to a mapped network drive. Navigate 
-to the location where you want to place the file, then click Save. 
-The file is downloaded to your computer.</p></li></ul><p><b>Create 
-a New Folder</b> <br> In the New Folder field, specify the name of 
-the new folder, then click Create. Folder names are case sensitive. 
-When the page refreshes, the folder appears alphabetically in the list.<br></p><p><b>Delete 
-Folders or Files</b><br>Select the check box next to one or more folders 
-or files you want to delete, then click Delete. Confirm the deletion.</p><p><b>Upload 
-a File</b> <br> In the Upload File field, click Browse, locate a local 
-folder you want to upload, then click Open &gt; Upload. When the page 
-refreshes, the file appears alphabetically in the list.</p></blockquote><p> 
-<a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a> 
-</p><p>&nbsp;</p><P CLASS="copyright">A trademark symbol (<SUP><SMALL>&reg;</SMALL></SUP>, 
+       --> 
+
+   
+
+  
+	
+  <h3><a name="browse"></a>Searching for Folders And Files</h3>
+  <p> The Search page helps you locate the files or folders of your interest. 
+    Use the search tool located at the top right of the page for this purpose. 
+    Type the name of the file or folder in the search entry field and press Enter 
+    to get the search result in the Search page with the search text highlighted 
+    in yellow. </p>
+  <p>Use one or more of the following search methods and press Enter.</p>
+  <UL>
+    <LI> 
+      <P>Type one or more letters of the name of the file or folders in the Search 
+        entry field.</P>
+    </LI>
+    <LI>
+      <P>Type an asterisk (*) in the Search iFolders field to return a list of 
+        all iFolders on the system.</P>
+    </LI>
+    <LI>
+      <P>Leave the Search iFolders field empty to return a list of all iFolders 
+        on the system.</P>
+    </LI>
+  </UL>
+  <p>Do not click anywhere in the page until the page completely refreshes, then 
+    you can browse or manage the files or folders listed in the search results. 
+    Scroll up and down to browse the search results and locate the folder or file 
+    of your interest. The combination of the file or folder name and date created 
+    can help you identify the file or folder you seek.</P>
+  
+
+  
+<a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a>
+<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
+Related Topics</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Accessing Your iFolders</A><BR><A HREF="details.html">Viewing iFolder Properties
+</A><BR><A HREF="members.html">Managing iFolder Members</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A>
+
+  <p>&nbsp; </p>
+<P CLASS="copyright">A trademark symbol (<SUP><SMALL>&reg;</SMALL></SUP>, 
 <SUP><SMALL>TM</SMALL></SUP>, etc.) denotes a Novell trademark. An 
 asterisk (*) denotes a third-party trademark. For more information, 
 see <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Legal 
