--- a/simias/src/webaccess/help/en/share.html
+++ b/simias/src/webaccess/help/en/share.html
@@ -4,7 +4,7 @@
 
 <!-- Novell iFolder 3.x Web Access  --> 
 
-<title>Accessing Folders and Files</title> 
+<title>Adding shared members</title> 
 
 <!-- Metadata --> 
   <meta name="Author" content="iFolder 3.x Documentation Manager"> 
@@ -42,11 +42,11 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> 
-  <h3 class="head3b"><a name="top"></a>Adding New Shared Member</h3>
-<p>Perform the following steps to add a new shared user to the iFolder:</p>
+  <h3 class="head3b"><a name="top"></a>Adding New Shared User</h3>
+  <p>To add a new user to the list of shared user,</p>
   <ol>
     <li> 
-      <p>Use the search tool to locate the member you want to share the iFolder 
+      <p>Use the search tool to locate the user you want to share the iFolder 
         with.</p>
     </li>
     <P> 
@@ -55,10 +55,15 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
     <li> 
       <p> Click <img src="../../images/list-add.png" width="16" height="16" alt="File icon"> 
         (the blue plus sign is blue in colour) to add the users to the list of 
-        shared members listed at the right side of the page.</p>
-    </li>
-    <p>After a user is added, the plus sign next to the iFolder name turns to black.</p> 
-	<p>Click Cancel to cancel all your operations on this page.<p>
+        shared users. </p>
+      <p>The added members appear at the right side of the page under Share 
+      with. After a user is added, the plus sign next to the iFolder name turns to 
+      black. </p>
+    </li><li> 
+      <p>Click share to confirm sharing.</p>
+    
+    <p>Click Cancel to cancel all your operations on this page.
+    <p> 
   </ol>
 	
   
