--- a/simias/src/webaccess/help/en/upload.html
+++ b/simias/src/webaccess/help/en/upload.html
@@ -45,10 +45,10 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
   <h3 class="head3b"><a name="top"></a>Upload 
 a File</h3>
   <ol><li>
-      <p>In the Upload File field, click Browse to locate a local file you want 
+      <p>In the Upload File field, click Browse to locate the local file you want 
         to upload.</p>
     </li><li>
-      <p> Click Open &gt; Upload.</p>
+      <p> Select the file, and then click Open &gt; Upload.</p>
     </li> When the page 
 refreshes, the file appears alphabetically in the list. </ol>
   
