--- a/simias/src/webaccess/help/en/history.html
+++ b/simias/src/webaccess/help/en/history.html
@@ -48,11 +48,11 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
   <h3 class="head3b">Viewing iFolder History</h3>
   <p> Use this page to view the iFolder history. </p>
   <p>The History page tracks and displays all the iFolder operations performed 
-    on the selected iFolder. It lists all the folders and files within the selected 
-    iFolder that have been added or removed by a user. It also shows the username 
-    of the iFolder owner, the time and date of iFolder operations, and the username 
-    of the user who performed the iFolder operations on the selected iFolder and 
-    its file and folders.</p>
+    on the selected iFolder. It lists all the folders and files that have been 
+    added to or removed from the selected iFolder by an user. It shows the time 
+    and date of iFolder operations performed, and the username that tells who 
+    performed the iFolder operations on the selected iFolder and on its files 
+    and folders.</p>
 	<A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A>
   <H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
 Related Topics</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Accessing Your iFolders</A><BR><A HREF="browse.html">Accessing Folders and Files in Your iFolder
