--- a/simias/src/webaccess/help/en/members.html
+++ b/simias/src/webaccess/help/en/members.html
@@ -46,15 +46,16 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
   <p> Use this interface to add or remove shared members, assign rights to the 
     members and change the ownership of the selected iFolder.</p>
   <p>This help discusses the following:</p><blockquote > 
-<p><a href="#manage" target="_self">Managing Folders and Files in an iFolder</a><br><a href="#accessright" target="_self">Understanding iFolder Access Rights</a> <br> 
+    <p><a href="#manage" target="_self">Managing Users of An iFolder</a><br>
+      <a href="#accessright" target="_self">Understanding iFolder Access Rights</a> <br> 
 </p> </blockquote>
   
-<h3><a name="manage"></a>Managing 
-Folders and Files in an iFolder</h3><p>Within an iFolder, you can perform 
+  <h3><a name="manage"></a>Managing Users of An iFolder</h3>
+  <p>Within an iFolder, you can perform 
 the following tasks:</p>
   <h4>Adding New Shared User</h4>
   <p>Click Add to add new shared members to the selected iFolder.The new page 
-    opens to list the available users in the iFolder domain.</p>
+    opens that allows you to add users to the list of shared users.</p>
 	
   
   <h4>Assigning Rights to a Shared User</h4>
@@ -69,17 +70,26 @@ the following tasks:</p>
   <P><B>Read/Write</B><BR>
     A member of the shared iFolder, with the Read/Write access right to directories and files in the iFolder.</P>
 	<P><B>Full Control</B><BR>
-    A member of the shared iFolder, with the Full Control access right. The user with the Full Control right has read/write access to the iFolder and manages membership and access rights for all users except the owner.</P>
+      A member of the shared iFolder, with the Full Control access right. The 
+      user with the Full Control right has read/write access to the iFolder and 
+      manages membership and access rights for all users except the owner. But, 
+      only the owner have the right to delete an iFolder.</P>
   <P><B>Owner<BR>
-    </B>Only one user serves as the owner of an iFolder. This is typically the user who created the iFolder. The owner user can use the iFolder client to transfer ownership to another member of the iFolder. The iFolder Admin user can transfer ownership to any user on the iFolder server from the iFolder &gt; General tab.</P>
-  <P>The owner of an iFolder has the Full Control right. This user has read/write access to the iFolder, manages membership and access rights for member users, and can remove the Full Control right for any member. With an enterprise server, the disk space used by the owner&#146;s iFolders count against the owner&#146;s user disk quotas on the enterprise server.</P>
+      </B>Only one user serves as the owner of an iFolder. This is typically the 
+      user who created the iFolder and only he or she can delete this iFolder. 
+      The owner user can use the iFolder client to transfer ownership to another 
+      member of the iFolder. The iFolder Admin user can transfer ownership to 
+      any user on the iFolder server.</P>
+    <P>The owner of an iFolder has the Full Control right. This user has read/write 
+      access to the iFolder, manages membership and access rights for member users, 
+      and can remove the Full Control right for any member. </P>
   <P>If a user is deleted as a user for the iFolder system, the iFolders owned by the user are orphaned. Orphaned iFolders are assigned temporarily to the iFolder Admin user as owner. Membership and synchronization continues for other users while the iFolder Admin user determines whether an orphaned iFolder should be deleted or assigned to a new owner.</P>
-    
+   <p>  
 </BLOCKQUOTE>
 
 <p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a>
 <H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
-Related Topics</H4><BLOCKQUOTE class="task1"><P ><A HREF="browse.html">Accessing Folders and Files in Your iFolder</A><BR><A HREF="details.html">Viewing iFolder Properties
+Related Topics</H4><BLOCKQUOTE class="task1"><p><A HREF="share.html">Adding shared members</A><br><A HREF="browse.html">Accessing Folders and Files in Your iFolder</A><BR><A HREF="details.html">Viewing iFolder Properties
 </A><BR><A HREF="home.html">Accessing Your iFolders</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A></P><P>&nbsp;</P>
   <P CLASS="copyright">&nbsp;</p>
   <p>&nbsp;</p><P CLASS="copyright">A trademark symbol (<SUP><SMALL>&reg;</SMALL></SUP>, 
