Updated to include encrypted and shared icons
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6965 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/help/en/home.html
+++ b/simias/src/webaccess/help/en/home.html
@@ -47,6 +47,13 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
     Available iFolders include those you own and those others have shared 
     with you. You can access shared iFolders through Web Access even if you have 
     not set up the iFolder on a local computer.</p>
+	
+	  
+  <p>Icon <img src="../../images/ifolder_user_16.gif" width="16" height="16" alt="Shared icon"> 
+    indicates that the iFolder is Shared.<br>
+	
+  Icon <img src="../../images/encrypt_ilock2_16.gif" width="16" height="16" alt="Shared icon"> 
+    indicates that the iFolder is Encrypted.</p>
 	<p>For each iFolder, you can view the created date and the respective owner. 
     Click the iFolder link to view the list of its folders and files in a new 
     page. </p>
